# splitmydb

./: .gitignore  CMakeLists.txt  README.md
src/: common.c  common.h  config.h  connection.c  connection.h  splitmydb.c  write_insert.c  write_insert.h
